[Misc] Fix various mechanical SonarQube issues in the rendering modules
* java:S6397: drop redundant single-character regex character classes
* java:S6485: use the HashMap/LinkedHashMap.newXxx() factory methods
* java:S6208: merge fall-through case labels into comma-separated labels
* java:S6204: use Stream.toList() instead of collect(Collectors.toList())
* java:S2864: iterate entrySet() instead of keySet() + get()
* java:S1161: add a missing @Override annotation
* java:S1481/java:S1068: remove an unused local variable and an unused private field
* java:S1126: replace an if-then-else returning booleans with a single return

Co-Authored-By: Vincent Massol <vincent@massol.net>